--- a/css/style.css
+++ b/css/style.css
@@ -94,6 +94,10 @@
 
 /* general style */
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   background: var(--clr-light);
   color: var(--clr-dark);
@@ -196,8 +200,108 @@ h3 {
 
 /* header */
 
-nav {
-  display: none;
+header {
+  display: flex;
+  justify-content: space-between;
+  padding: 1em;
+}
+.logo {
+  max-width: 60px;
+}
+.nav {
+  position: fixed;
+  background: var(--clr-dark);
+  color: var(--clr-light);
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 100;
+
+  transform: translateX(100%);
+  transition: transform 250ms cubic-bezier(0.5, 0, 0.5, 0);
+}
+.nav__list {
+  list-style: none;
+  display: flex;
+  height: 100%;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+}
+
+.nav__link {
+  color: inherit;
+  font-weight: var(--fw-bold);
+  font-size: var(--fs-h2);
+  text-decoration: none;
+}
+.nav__link:hover {
+  color: var(--clr-accent);
+  /* animation: pulse 2s infinite; */
+  /* border-radius: 20%; */
+}
+
+/* functionality of the hamburger */
+.nav-toggle {
+  padding: 0.5em;
+  background: transparent;
+  border: 0;
+  cursor: pointer;
+  position: absolute;
+  right: 1em;
+  top: 1em;
+  z-index: 1000;
+}
+
+.nav-open .nav {
+  transform: translate(0);
+}
+.nav-open .nav-toggle {
+  position: fixed;
+}
+.nav-open .hamburger {
+  transform: rotate(0.625turn);
+}
+.nav-open .hamburger::before {
+  transform: rotate(90deg) translateX(-6px);
+  /* background: red; */
+}
+.nav-open .hamburger::after {
+  opacity: 0;
+}
+
+/* Hamburger */
+.hamburger {
+  display: block;
+  position: relative;
+}
+
+.hamburger,
+.hamburger::before,
+.hamburger::after {
+  background: var(--clr-accent);
+  width: 2em;
+  height: 3px;
+  border-radius: 1em;
+  transition: transform 250ms ease-in-out;
+}
+
+.hamburger::before,
+.hamburger::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  right: 0;
+}
+
+.hamburger::before {
+  top: 6px;
+}
+.hamburger::after {
+  bottom: 6px;
 }
 
 /* intro section */
@@ -244,7 +348,7 @@ nav {
 
 /* technologies section */
 
-.my-services {
+.my-technologies {
   background-color: var(--clr-dark);
   background-image: url(/picture/IMG_soft-filigree-blue-background.jpg);
   background-size: cover;
@@ -253,12 +357,12 @@ nav {
   text-align: center;
 }
 
-.section__title--services {
+.section__title--technologies {
   color: var(--clr-accent);
   position: relative;
 }
 
-.section__title--services::after {
+.section__title--technologies::after {
   content: '';
   display: block;
   width: 3em;
@@ -268,23 +372,23 @@ nav {
   opacity: 0.25;
 }
 
-.services {
+.technologies {
   margin-bottom: 4em;
 }
 
-.service {
+.tech {
   max-width: 500px;
   margin: 0 auto;
 }
 
 @media (min-width: 800px) {
-  .services {
+  .technologies {
     display: flex;
     max-width: 1000px;
     margin-left: auto;
     margin-right: auto;
   }
-  .service + .service {
+  .tech + .tech {
     margin-left: 2em;
   }
 }
@@ -340,8 +444,15 @@ nav {
 }
 
 .portfolio {
+  margin: 0 10em;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+}
+
+@media (max-width: 1200px) {
+  .portfolio {
+    margin: 0;
+  }
 }
 
 .portfolio__item {
@@ -350,6 +461,7 @@ nav {
 }
 
 .portfolio__img {
+  height: 100%;
   transition: transform 750ms cubic-bezier(0.5, 0, 0.5, 1), opacity 250ms linear;
 }
 
