--- a/css/style.css
+++ b/css/style.css
@@ -564,3 +564,24 @@ header {
 .icon-freecodecamp:hover {
   border-radius: 25px;
 }
+
+/* Portfolio-items */
+
+.portfolio-item-individual {
+  padding: 0 2em 2em;
+  max-width: 1000px;
+  margin: 0 auto;
+}
+
+.portfolio-item-individual p {
+  max-width: 600px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.portfolio-item-individual img {
+  max-width: 800px;
+  margin-left: auto;
+  margin-right: auto;
+  box-shadow: var(--bs);
+}
