--- a/css/style.css
+++ b/css/style.css
@@ -565,11 +565,11 @@ header {
   border-radius: 25px;
 }
 
-/* Portfolio-items */
+/* Portfolio-items general*/
 
 .portfolio-item-individual {
   padding: 0 2em 2em;
-  max-width: 1000px;
+  max-width: 800px;
   margin: 0 auto;
 }
 
@@ -579,8 +579,8 @@ header {
   margin-right: auto;
 }
 
-.portfolio-item-individual img {
-  max-width: 800px;
+.portfolio-item-individual .project-pic {
+  max-width: 100%;
   margin-left: auto;
   margin-right: auto;
   box-shadow: var(--bs);
