styling and fonts change

--- a/css/style.css
+++ b/css/style.css
@@ -5,11 +5,14 @@
 }
 
 :root {
-  --ff-primary: 'Source Sans Pro', sans-serif;
-  --ff-secondary: 'Source Code Pro', monospace;
+  /* --ff-primary: 'Source Sans Pro', sans-serif;
+  --ff-secondary: 'Source Code Pro', monospace; */
 
-  --fw-reg: 300;
-  --fw-bold: 900;
+  --ff-primary: 'Lora', serif;
+  --ff-secondary: 'Roboto', serif;
+
+  --fw-reg: 400;
+  --fw-bold: 700;
 
   --clr-light: #fff;
   --clr-dark: #303030;
