--- a/css/style.css
+++ b/css/style.css
@@ -464,7 +464,8 @@ header {
 }
 
 .portfolio__img {
-  height: 100%;
+  /* height: 100%; */
+  height: fit-content;
   transition: transform 750ms cubic-bezier(0.5, 0, 0.5, 1), opacity 250ms linear;
 }
 
