--- a/css/style.css
+++ b/css/style.css
@@ -114,11 +114,6 @@ section {
   padding: 5em 2em;
 }
 
-img {
-  display: block;
-  max-width: 100%;
-}
-
 strong {
   font-weight: var(--fw-bold);
 }
@@ -463,9 +458,13 @@ header {
   overflow: hidden;
 }
 
+img {
+  display: block;
+  max-width: 100%;
+}
+
 .portfolio__img {
-  /* height: 100%; */
-  height: fit-content;
+  height: 100%;
   transition: transform 750ms cubic-bezier(0.5, 0, 0.5, 1), opacity 250ms linear;
 }
 
