--- a/css/style.css
+++ b/css/style.css
@@ -386,9 +386,9 @@ header {
     margin-left: auto;
     margin-right: auto;
   }
-  .tech + .tech {
-    margin-left: 2em;
-  }
+    .tech {
+        width: 30%;
+    }
 }
 
 /* About me */
